Add mobile app links

--- a/index.html
+++ b/index.html
@@ -122,10 +122,6 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="card bg-light mb-3">
         <div class="card-header">FAQ</div>
         <div class="card-body">
-          <h4 class="card-title">Who are you?</h4>
-          <p class="card-text">I'm <a class="text-primary" href="https://hope.edu/directory/people/herzog-leo/" target="_blank">Leo Herzog '13</a>. I work at <a class="text-primary" href="https://hope.edu/cit" target="_blank">CIT</a> at Hope.
-            I play Fantasy Movie League with my friends group and thought it would be fun to get a Hope league going.</p>
-          <hr class="my-4">
           <h4 class="card-title">Who can join <a class="text-primary" href="https://fantasymovieleague.com/league/35725/" target="_blank">the Hope College league?</a></h4>
           <p class="card-text">Anyone! Faculty, Staff, Students, Alumni, Parents, Friends, whoever. The "join" button above should let you in,
             but if you have trouble, search for the "Hope College" league. The password is "hopecollege".
@@ -137,8 +133,16 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <h4 class="card-title">How much does it cost?</h4>
           <p class="card-text">It's free! An account with <a class="text-primary" href="https://fantasymovieleague.com/aboutus" target="_blank">Fantasy Movie League</a> is all you need to play.</p>
           <hr class="my-4">
+          <h4 class="card-title">How do I make my picks?</h4>
+          <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:&#8193;<a href='https://itunes.apple.com/us/app/fantasy-movie-league/id1089244568?mt=8'><img alt='Download on the App Store' src='app-store.svg' /></a>&#8193;<a href='https://play.google.com/store/apps/details?id=com.kinetoplay.fantasymovieleague'><img alt='Get it on Google Play' src='google-play.svg' /></a></p>
+          <hr class="my-4">
           <h4 class="card-title">Where can I learn more about how to play?</h4>
           <p class="card-text">Start with <a class="text-primary" href="https://fantasymovieleague.com/howtoplay" target="_blank">the "How to Play" Guide at fantasymovieleague.com</a>.</p>
+          <hr class="my-4">
+          <h4 class="card-title">Who are you?</h4>
+          <p class="card-text">I'm <a class="text-primary" href="https://hope.edu/directory/people/herzog-leo/" target="_blank">Leo Herzog '13</a>.
+            I work at <a class="text-primary" href="https://hope.edu/cit" target="_blank">CIT</a> at Hope.
+            I play Fantasy Movie League with my friends group and thought it would be fun to get a Hope league going.</p>
         </div>
       </div>
     </div>
