Wrap mobile app links in grid

--- a/index.html
+++ b/index.html
@@ -134,7 +134,22 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <p class="card-text">It's free! An account with <a class="text-primary" href="https://fantasymovieleague.com/aboutus" target="_blank">Fantasy Movie League</a> is all you need to play.</p>
           <hr class="my-4">
           <h4 class="card-title">How do I make my picks?</h4>
-          <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:&#8193;<a href='https://itunes.apple.com/us/app/fantasy-movie-league/id1089244568?mt=8'><img alt='Download on the App Store' src='app-store.svg' /></a>&#8193;<a href='https://play.google.com/store/apps/details?id=com.kinetoplay.fantasymovieleague'><img alt='Get it on Google Play' src='google-play.svg' /></a></p>
+          <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:
+          <div class="container" style="margin-bottom:0">
+            <div class="row">
+              <div class="col-lg-2">
+                <a href="https://itunes.apple.com/us/app/fantasy-movie-league/id1089244568?mt=8">
+                  <img alt="Download on the App Store" src="app-store.svg" style="margin-bottom:8px" />
+                </a>
+              </div>
+              <div class="col-lg-2">
+                <a href="https://play.google.com/store/apps/details?id=com.kinetoplay.fantasymovieleague">
+                  <img alt="Get it on Google Play" src="google-play.svg" />
+                </a>
+              </div>
+            </div>
+          </div>
+          </p>
           <hr class="my-4">
           <h4 class="card-title">Where can I learn more about how to play?</h4>
           <p class="card-text">Start with <a class="text-primary" href="https://fantasymovieleague.com/howtoplay" target="_blank">the "How to Play" Guide at fantasymovieleague.com</a>.</p>
