Add boilerplate for embedded leaderboard

--- a/index.html
+++ b/index.html
@@ -110,13 +110,24 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="card text-white bg-primary mb-3">
         <div class="card-header">This Week</div>
         <div class="card-body">
-          <h4 id="countdown" class="card-title">Calculating remaining time...</h4>
+          <h4 id="countdown" class="card-title">Checking...</h4>
           <div class="progress">
             <div id="countdown-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- <div id="standings" class="container">
+      <div class="card text-white bg-secondary mb-3">
+        <div class="card-header">Current Standings</div>
+        <div class="card-body">
+          <div class="embed-responsive embed-responsive-4by3">
+            <iframe class="embed-responsive-item" src="https://fantasymovieleague.com/league/35725?contestId=1&periodId=4#league-entries"></iframe>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <div id="faq" class="container">
       <div class="card bg-light mb-3">
