Refactor mobile app links into grid

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
         <div class="card-body">
           <h4 class="card-title">Who can join <a class="text-primary" href="https://fantasymovieleague.com/league/35725/" target="_blank">the Hope College league?</a></h4>
           <p class="card-text">Anyone! Faculty, Staff, Students, Alumni, Parents, Friends, whoever. The "join" button above should let you in,
-            but if you have trouble, search for the "Hope College" league. The password is "hopecollege".
+            but if you have trouble, search for the "Hope College" league. The password is <code>hopecollege</code>.
           </p>
           <hr class="my-4">
           <h4 class="card-title">What do I win?</h4>
@@ -145,12 +145,14 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <p class="card-text">It's free! An account with <a class="text-primary" href="https://fantasymovieleague.com/aboutus" target="_blank">Fantasy Movie League</a> is all you need to play.</p>
           <hr class="my-4">
           <h4 class="card-title">How do I make my picks?</h4>
-          <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:
-          <div class="container" style="margin-bottom:0">
+          <div class="container mb-0">
             <div class="row">
-              <div class="col-lg-2">
+              <div class="col-lg-7 mb-2 pl-0">
+                <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:</p>
+              </div>
+              <div class="col-lg-2 mb-2">
                 <a href="https://itunes.apple.com/us/app/fantasy-movie-league/id1089244568?mt=8">
-                  <img alt="Download on the App Store" src="app-store.svg" style="margin-bottom:8px" />
+                  <img alt="Download on the App Store" src="app-store.svg" />
                 </a>
               </div>
               <div class="col-lg-2">
@@ -160,7 +162,6 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
               </div>
             </div>
           </div>
-          </p>
           <hr class="my-4">
           <h4 class="card-title">Where can I learn more about how to play?</h4>
           <p class="card-text">Start with <a class="text-primary" href="https://fantasymovieleague.com/howtoplay" target="_blank">the "How to Play" Guide at fantasymovieleague.com</a>.</p>
