--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
 <body>
 
   <div class="navbar navbar-expand-lg navbar-dark bg-primary" role="navigation">
-    <a class="navbar-brand mx-auto" href="https://fantasymovieleague.com/league/35725/" target="_blank"><span class="fal fa-film"></span> Hope College Unofficial Fantasy Movie League</a>
+    <a class="navbar-brand mx-auto" href="https://fantasymovieleague.com/league/35725/" target="_blank" style="cursor:default"><span class="fal fa-film-alt"></span> Hope College Unofficial Fantasy Movie League</a>
   </div>
 
   <section id="allcontent" data-type="background">
