Additional progress bar tweaks

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
         <div class="card-body">
           <h4 id="countdown" class="card-title">Checking...</h4>
           <div class="progress">
-            <div id="countdown-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
+            <div id="countdown-bar" class="progress-bar progress-bar-striped " role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
           </div>
         </div>
       </div>
