--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <div class="container mb-0">
             <div class="row">
               <div class="col-lg-7 mb-2 pl-0">
-                <p class="card-text">Either use the website, <a href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:</p>
+                <p class="card-text">Either use the website, <a class="text-primary" href="https://fantasymovieleague.com/league/35725" target="_blank">fantasymovieleague.com</a>, or download the mobile app:</p>
               </div>
               <div class="col-lg-2 mb-2">
                 <a href="https://itunes.apple.com/us/app/fantasy-movie-league/id1089244568?mt=8">
