--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <div class="progress">
             <div id="countdown-bar" class="progress-bar progress-bar-striped " role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
           </div>
+          <br />
+          <div class="alert alert-warning alert-dismissible fade show">
+            <h4 class="alert-heading">Heads up!</h4>
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            The first week is supposed to be open for picks, but some users are reporting having trouble making their selections.
+            We are working with FML support and will update you here shortly!
+          </div>
         </div>
       </div>
     </div>
