--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <div class="progress">
             <div id="countdown-bar" class="progress-bar progress-bar-striped " role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
           </div>
-          <br />
+          <!-- <br />
           <div class="alert alert-success alert-dismissible fade show">
             <h4 class="alert-heading">Issues Resolved</h4>
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             The issues that some were experiencing with making your pick this week have now been resolved. Thanks for your patience, and good luck!
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
