--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
   <script defer src="//pro.fontawesome.com/releases/v5.5.0/js/all.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.23/moment-timezone-with-data-2012-2022.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-duration-format/2.2.2/moment-duration-format.min.js"></script>
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/sandstone/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -215,12 +216,12 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       $('#picks-button-container').hide();
     } else { // during open period. show countdown.
       console.log("Counting down to deadline on Friday");
-      $('#countdown').html('<span class="far fa-hourglass-half fa-fw"></span> Deadline for your picks this week is Friday at Noon. That\'s ' + deadline.from(now) + '!');
+      var timeleft = moment.duration(deadline.diff(now));
+      $('#countdown').html('<span class="far fa-hourglass-half fa-fw"></span> Deadline for your picks is in ' + timeleft.format("d [days], h [hours], m [minutes] [and] s [seconds]") + '!');
       var totalTimeOpenWindow = deadline.diff(open);
       var timeElapsed = now.diff(open);
       var percentageElapsed = (timeElapsed / totalTimeOpenWindow) * 100;
       $('#countdown-bar').addClass('bg-warning progress-bar-animated').removeClass('bg-success').attr('aria-valuenow', percentageElapsed).css('width', percentageElapsed + '%');
-      // week one of FML
       var firstWeekOfFMLEver = moment('2015-04-21');
       var picksUrl = "https://fantasymovieleague.com/league/16982?weekId=" + now.diff(firstWeekOfFMLEver, 'weeks');
       $('#picks-button').attr("href", picksUrl);
