Enable standings box

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       </div>
     </div>
 
-    <!-- <div id="standings" class="container">
+    <div id="standings" class="container">
       <div class="card text-white bg-secondary mb-3">
         <div class="card-header">Current Standings</div>
         <div class="card-body">
@@ -137,7 +137,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div id="faq" class="container">
       <div class="card bg-light mb-3">
