--- a/index.html
+++ b/index.html
@@ -118,12 +118,6 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <div id="action-button-container" class="mt-3" style="display:none">
             <a id="action-button" class="btn btn-lg btn-block" href="" target="_blank" role="button"></a>
           </div>
-          <!-- <br />
-          <div class="alert alert-success alert-dismissible fade show">
-            <h4 class="alert-heading">Issues Resolved</h4>
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            The issues that some were experiencing with making your pick this week have now been resolved. Thanks for your patience, and good luck!
-          </div> -->
         </div>
       </div>
     </div>
@@ -132,6 +126,11 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="card text-white bg-secondary mb-3">
         <div class="card-header">Current Standings</div>
         <div class="card-body">
+          <div class="alert alert-light alert-dismissible fade show">
+            <h4 class="alert-heading">Join today!</h4>
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            This season may have already started, but you can still make an account. It's free, and fun!
+          </div>
           <div class="embed-responsive embed-responsive-4by3">
             <iframe class="embed-responsive-item" src="https://fantasymovieleague.com/league/35725?contestId=1&periodId=4#league-entries"></iframe>
           </div>
