HOW could I forget the ICON?

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
 
     <div id="standings" class="container">
       <div class="card text-white bg-secondary mb-3">
-        <div class="card-header">Current Standings</div>
+        <div class="card-header"><span class="far fa-list-ol fa-fw"></span> Current Standings</div>
         <div class="card-body">
           <div class="alert alert-light alert-dismissible fade show">
             <h4 class="alert-heading">Join today!</h4>
