Prepare for Season Winner Message

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
         }
     }
 
+   .alert {
+      padding: 12px 20px;
+    }
+
+    .alert-success {
+      background-color: #5D812A; /* accessibility is important! */
+    }
+
     #allcontent {
       margin-top: 8vh;
     }
@@ -98,6 +106,15 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
   </div>
 
   <section id="allcontent" data-type="background">
+
+    <!-- <div id="lastseasonwinner" class="container">
+      <div class="alert alert-dismissible alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h2><span class="far fa-medal fa-fw"></span> Congratulations @username!</h2>
+        <h5>Winner of the 2019 Awards Season! <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=4#league-entries" target="_blank">See the full results</a>.</h5>
+        <h5>The Spring 2019 season is now open!</h5>
+      </div>
+    </div> -->
 
     <div id="intro" class="container">
       <div class="jumbotron">
