--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="card bg-light mb-3">
         <div class="card-header"><span class="far fa-question-circle fa-fw"></span> FAQ</div>
         <div class="card-body">
-          <h4 class="card-title">Who can join <a class="text-primary" href="https://fantasymovieleague.com/league/35725/" target="_blank">the Hope College league?</a></h4>
+          <h4 class="card-title">Who can join <a class="text-primary" href="https://fantasymovieleague.com/league/35725/" target="_blank">the Hope College league</a>?</h4>
           <p class="card-text">Anyone! Faculty, Staff, Students, Alumni, Parents, Friends, whoever. The "join" button above should let you in,
             but if you have trouble, search for the "Hope College" league. The password is <code>hopecollege</code>.
           </p>
